# DROIDVALDS-media-player

contrib/win32/: crossfile.meson  toolchain.cmake
contrib/win32/aom/vlc_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt  libaom_srcs.gni  libaom_srcs.txt
contrib/win32/aribb24/src/: aribb24.pc.in
contrib/win32/aribb25/: README.jp.txt  README.md  configure.ac
contrib/win32/aribb25/src/: arib_std_b25.c  b_cas_card.c  multi2.c  td.c  ts_section_parser.c
contrib/win32/asdcplib/: CMakeLists.txt  Makefile.am  asdcplib.pc.in  configure.ac
contrib/win32/asdcplib/m4/: ax_lib_nettle.m4
contrib/win32/asdcplib/src/: AS_DCP.h  AS_DCP_AES.cpp  KM_fileio.cpp  KM_fileio.cpp.orig  KM_fileio.h  KM_prng.cpp  Makefile.am  ST2052_TextParser.cpp  asdcp-test.cpp  asdcp-util.cpp  fips-186-rng-test.cpp  kmfilegen.cpp  nettle_map.h
contrib/win32/chromaprint/: CMakeLists.txt  CMakeLists.txt.orig  libchromaprint.pc.cmake
contrib/win32/decklink/: README.md
contrib/win32/dvdnav/: .gitignore  .gitlab-ci.yml  meson.build  meson_options.txt
contrib/win32/dvdnav/examples/: meson.build
contrib/win32/dvdnav/package/crossfiles/: wasm-unknown-emscripten.meson
contrib/win32/dvdnav/src/: dvdnav_internal.h  logger.h  meson.build  read_cache.h  searching.c
contrib/win32/dvdnav/src/dvdnav/: dvdnav.h  meson.build
contrib/win32/dvdnav/src/vm/: play.c
contrib/win32/dvdread/: .gitignore  .gitlab-ci.yml  NEWS  README.md  meson.build  meson_options.txt
contrib/win32/dvdread/package/crossfiles/: aarch64-w64-mingw32.meson  aarch64-w64-mingw32uwp.meson  armv7-w64-mingw32.meson  armv7-w64-mingw32uwp.meson  i686-w64-mingw32.meson  i686-w64-mingw32uwp.meson  wasm-unknown-emscripten.meson  x86_64-w64-mingw32.meson  x86_64-w64-mingw32uwp.meson
contrib/win32/dvdread/src/: bswap.h  dvd_input.c  dvd_input.h  dvd_reader.c  dvd_udf.c  dvdread_internal.h  ifo_print.c  ifo_read.c  logger.h  meson.build
contrib/win32/dvdread/src/dvdread/: attributes.h  bitreader.h  dvd_reader.h  dvd_udf.h  ifo_print.h  ifo_read.h  ifo_types.h  meson.build  nav_print.h  nav_read.h  nav_types.h
contrib/win32/fluidlite/: fluidlite.pc.in
contrib/win32/fxc2/: fxc2.cpp  fxc2.cpp.orig
contrib/win32/gcrypt/: Makefile.am
contrib/win32/gettext/: configure.orig
contrib/win32/glslang/: CMakeLists.txt
contrib/win32/gmp/: acinclude.m4  config.in  configure.ac
contrib/win32/gnutls/: aminclude_static.am
contrib/win32/goom/: configure.in
contrib/win32/gsm/: Makefile.orig
contrib/win32/lame/: configure.in  configure.in.orig
contrib/win32/libdvbcsa/: configure.ac
contrib/win32/libdvbpsi/: NEWS  libdvbpsi.spec  libdvbpsi.spec.in
contrib/win32/libgpg-error/: VERSION  configure.ac  libgpg-error.spec
contrib/win32/libkate/: Makefile.am  README  configure.ac
contrib/win32/libkate/src/: kate_high.c  kate_tracker.c
contrib/win32/libkate/tests/: Makefile.am  bitwise.c  check_sizes.c
contrib/win32/libkate/tools/: Makefile.am  katalyzer.c  kate_lexer.c  kate_parser.c  kate_parser.h  katedec.c  kateenc.c  kpng.c
contrib/win32/libkate/tools/KateDJ/: KateDJ  Makefile.am
contrib/win32/libkate/tools/KateDJ/kdj/: constants.py  demuxer.py  finder.py  muxer.py  tester.py  tools.py  ui_editor.py  ui_main.py  ui_options.py
contrib/win32/libmad/: bit.c  bit.h  configure.ac  frame.c  layer12.c  layer3.c  stream.c  stream.h
contrib/win32/libmodplug/: configure.ac  libmodplug.pc.in
contrib/win32/libplacebo/: meson.build  meson_options.txt
contrib/win32/librist/: .gitlab-ci.yml  NEWS  README.md  meson.build  meson_options.txt
contrib/win32/librist/tools/: meson.build  oob_shared.c  oob_shared.h  prometheus-exporter.c  prometheus-exporter.h  rist2rist.c  ristreceiver.c  ristsender.c  risttunnel.c  yamlparse.c  yamlparse.h
contrib/win32/libshout/: Makefile.am  configure.ac  shout.pc.in
contrib/win32/libtheora/: configure.ac
contrib/win32/libvorbis/: vorbis.pc.in  vorbisenc.pc.in  vorbisfile.pc.in
contrib/win32/libxml2/: globals.c  libxml-2.0.pc.in
contrib/win32/live555/: Makefile.tail  config.armeb-uclibc  config.armlinux  config.avr32-linux  config.bfin-linux-uclibc  config.bfin-uclinux  config.bsplinux  config.cris-axis-linux-gnu  config.cygwin  config.cygwin-for-vlc  config.freebsd  config.freebsd-no-openssl  config.iphone-simulator  config.iphoneos  config.linux  config.linux-64bit  config.linux-gdb  config.linux-no-openssl  config.linux-with-shared-libraries  config.linux.orig  config.macosx-bigsur.orig.orig  config.macosx-bigsur.orig.orig.orig.orig.orig  config.macosx-catalina.orig.orig  config.macosx-catalina.orig.orig.orig.orig.orig  config.macosx-no-openssl  config.macosx-no-openssl.orig.orig.orig.orig.orig  config.mingw  config.mingw.orig  config.openbsd  config.qnx4  config.solaris-32bit  config.solaris-32bit.orig  config.solaris-64bit  config.solaris-64bit.orig  config.uClinux  live555.pc.in
contrib/win32/matroska/: libmatroska.pc.in
contrib/win32/mpg123/: libmpg123.pc.in  libout123.pc.in  libsyn123.pc.in
contrib/win32/mysofa/: libmysofa.pc.cmake
contrib/win32/nfs/: CMakeLists.txt
contrib/win32/png/: libpng.pc.in
contrib/win32/protoc/: CMakeLists.txt
contrib/win32/soxr/: CMakeLists.txt
contrib/win32/speex/: speex.pc.in
contrib/win32/speexdsp/: speexdsp.pc.in
contrib/win32/sqlite/: sqlite3.pc.in
contrib/win32/srt/: CMakeLists.txt
contrib/win32/twolame/: twolame.pc.in
contrib/win32/upnp/: .gitignore  CMakeLists.txt  README.md  THANKS  UPNP.cmake.in  configure.ac  libupnp.pc.in  libupnp.spec
contrib/win32/vncclient/: CMakeLists.txt
contrib/win32/zlib/: CMakeLists.txt
modules/gui/qt/: assets.qrc  meson.build  qt.cpp  windows.qrc
po/: ach.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  brx.po  bs.po  ca.po  cgg.po  ckb.po  co.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  ff.po  fi.po  fr.po  fur.po  fy.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  (+58 more)
win32-build/po/: POTFILES
win32-build/share/: org.videolan.vlc.appdata.xml.in
(+502 files in other folders)
